--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -169,6 +169,10 @@ main {
   background-color: rgba(26, 39, 156, 0.4);
 }
 
+.bground--block {
+  display: block;
+}
+
 .content {
   margin: 5% auto;
   width: 100%;
@@ -227,7 +231,7 @@ input {
   border: 2px solid #e54858;
 }
 
-.class_error {
+.class--error {
   border: 2px solid#e54858;
   color: #e54858;
   background-color: rgb(255, 224, 224);
